Use site.url in links to assets

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 
-<div class="hero-image" style="background-image: url(/img/modeify-hero-image.jpg)">
+<div class="hero-image" style="background-image: url({{ site.url }}/img/modeify-hero-image.jpg)">
   <h1>Powerful, Open Source Tools for<br/>Transportation Demand Management</h1>
 </div>
 
