--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="{{ site.url }}/css/main.css">
 
     <!--<script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img class="navbar-logo" src="/img/modeify_logo.png"></a>
+          <a class="navbar-brand" href="/"><img class="navbar-logo" src="{{ site.url }}/img/modeify_logo.png"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -50,7 +50,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://github.com/conveyal/modeify"><i class="fa fa-fw fa-github"></i></a></li>
             <li><a href="mailto:contact@conveyal.com"><i class="fa fa-fw fa-envelope"></i></a></li>
-            <li><a href="http://www.conveyal.com"><img src="/img/conveyal_logo.png" style="height:20px;"></a></li>
+            <li><a href="http://www.conveyal.com"><img src="{{ site.url }}/img/conveyal_logo.png" style="height:20px;"></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
