--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,56 +4,53 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ page.title }}</title>
+    <title>Modeify: Modern TDM Technology</title>
     <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Transportation demand management technology platform built on open source software and open data tools.">
+    <meta name="keywords" content="transportation demand management,tdm,transit oriented development,analysis">
 
     <link rel="icon" href="/favicon.ico">
     <link rel="shortcut icon" href="/favicon.ico">
 
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@conveyal">
+    <meta name="twitter:title" content="Modeify">
+    <meta name="twitter:description" content="Transportation demand management technology platform built on open source software and open data tools.">
+    <meta name="twitter:image" content="http://modeify.co/img/modeify_logo.png">
+    <meta name="twitter:url" content="http://modeify.co">
+
     <!-- open sans -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300">
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="{{ site.url }}/css/main.css">
 
-    <!--<script>
+    <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-45854426-1', 'conveyal.com');
+
+      ga('create', 'UA-45854426-6', 'auto');
       ga('send', 'pageview');
-    </script>-->
+    </script>
 
   </head>
 
-
   <body class="{{ page.class }}">
 
-    <nav class="navbar navbar-fixed-top navbar-default" role="navigation">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/"><img class="navbar-logo" src="{{ site.url }}/img/modeify_logo.png"></a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://github.com/conveyal/modeify"><i class="fa fa-fw fa-github"></i></a></li>
-            <li><a href="mailto:contact@conveyal.com"><i class="fa fa-fw fa-envelope"></i></a></li>
-            <li><a href="http://www.conveyal.com"><img src="{{ site.url }}/img/conveyal_logo.png" style="height:20px;"></a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
+    <div class="container logo">
+      <div class="row">
+        <ul class="col-sm-12 links">
+          <li><a href="https://github.com/conveyal/modeify"><i class="fa fa-fw fa-github"></i> Project</a></li>
+          <li><a href="mailto:contact@conveyal.com"><i class="fa fa-fw fa-envelope"></i> Contact</a></li>
+          <li style="float: right;">made by <a href="http://www.conveyal.com"><img src="{{ site.url }}/img/conveyal_logo.png" style="height:30px;"></a></li>
+        </ul>
       </div>
-    </nav>
+
+      <img src="{{ site.url }}/img/modeify_logo.png">
+    </div>
 
     <div class="main">
