--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,24 @@ body {
   font-family: 'Open Sans', sans-serif;
   color: rgb(7, 27, 40);
   font-weight: 300;
-  padding-top: 165px;
+}
+
+a {
+  color: rgb(143, 195, 80);
+}
+
+a:active,
+a:hover {
+  color: rgb(92, 144, 29);
+}
+
+.logo {
+  text-align: center;
+  padding: 20px 0;
+}
+
+.logo img {
+  max-width: 250px;
 }
 
 .navbar {
@@ -97,6 +114,21 @@ footer {
   margin-bottom: 20px;
 }
 
+.links {
+  margin-bottom: 0;
+  text-align: left;
+}
+
+.links li {
+  display: inline-block;
+  padding: 10px 20px 30px 0;
+  font-size: 18px;
+}
+
+.links li:last-of-type {
+  padding-right: 0;
+}
+
 .hero-image {
   height: 240px;
   overflow: hidden;
@@ -106,8 +138,6 @@ footer {
   background-repeat: no-repeat;
   display: block;
   box-shadow: inset 0 0 20px rgba(7, 27, 40, 0.15);
-  margin-left: -20px;
-  margin-right: -20px;
 }
 
 .hero-image h1 {
@@ -117,8 +147,15 @@ footer {
   width: 100%;
   color: #fff;
   background-color: rgba(7, 27, 40, 0.6);
-  font-size: 3.5em;
+  font-size: 3.2em;
   margin: 0;
   padding-top: 65px;
   text-align: center;
+}
+
+@media (max-width: 767px) {
+  .hero-image h1 {
+    font-size: 2.2em;
+    padding: 50px 10px;
+  }
 }
