--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,19 @@ footer {
 }
 
 @media (max-width: 767px) {
+  .logo {
+    padding-top: 10px;
+  }
+
+  .links {
+    padding-right: 25px;
+  }
+
+  .links li {
+    font-size: 16px;
+    padding: 10px;
+  }
+
   .hero-image h1 {
     font-size: 2.2em;
     padding: 50px 10px;
