Add favicon, use relative urls

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Transportation demand management technology platform built on open source software and open data tools.">
     <meta name="keywords" content="transportation demand management,tdm,transit oriented development,analysis">
 
-    <link rel="icon" href="/favicon.ico">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="icon" href="/img/favicon.png">
+    <link rel="shortcut icon" href="/img/favicon.png">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@conveyal">
@@ -20,12 +20,12 @@
     <meta name="twitter:url" content="http://modeify.co">
 
     <!-- open sans -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300">
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="{{ site.url }}/css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -46,7 +46,7 @@
         <ul class="col-sm-12 links">
           <li><a href="https://github.com/conveyal/modeify"><i class="fa fa-fw fa-github"></i> Project</a></li>
           <li><a href="mailto:contact@conveyal.com"><i class="fa fa-fw fa-envelope"></i> Contact</a></li>
-          <li style="float: right;">made by <a href="http://www.conveyal.com"><img src="{{ site.url }}/img/conveyal_logo.png" style="height:30px;"></a></li>
+          <li style="float: right;">made by <a href="http://www.conveyal.com"><img src="/img/conveyal_logo.png" style="height:30px;"></a></li>
         </ul>
       </div>
 
