Switch to modeify.com

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,10 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@conveyal">
-    <meta name="twitter:title" content="Modeify">
-    <meta name="twitter:description" content="Transportation demand management technology platform built on open source software and open data tools.">
-    <meta name="twitter:image" content="http://modeify.co/img/modeify_logo.png">
-    <meta name="twitter:url" content="http://modeify.co">
+    <meta property="og:title" content="Modeify">
+    <meta property="og:description" content="Transportation demand management technology platform built on open source software and open data tools.">
+    <meta property="og:image" content="http://modeify.com/img/modeify_logo.png">
+    <meta property="og:url" content="http://modeify.com">
 
     <!-- open sans -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300">
